src/test/ui/consts/miri_unleashed/ptr_arith.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/ptr_arith.rs:9:14
   |
LL |     let _v = x == x;
   |              ^^^^^^ "pointer arithmetic or comparison" needs an rfc before being allowed inside constants

error[E0080]: could not evaluate static initializer
  --> $DIR/ptr_arith.rs:15:13
   |
LL |     let x = &0 as *const _ as usize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^ unable to turn pointer into raw bytes

error[E0080]: could not evaluate static initializer
  --> $DIR/ptr_arith.rs:23:14
   |
LL |     let _v = x + 0;
   |              ^^^^^ unable to turn pointer into raw bytes

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/ptr_arith.rs:9:14
   |
LL |     let _v = x == x;
   |              ^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/ptr_arith.rs:15:13
   |
LL |     let x = &0 as *const _ as usize;
   |             ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
